infra/terraform/modules/01_vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = var.cidr_block

  tags = {
    Name = var.vpc_name
  }
}


resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id

    count = 2
    cidr_block = "10.0.${count.index}.0/24"

    availability_zone = var.availability_zones[count.index]

    tags = {
        Name = "public:${count.index}:${var.availability_zones[count.index]}"
    }
}

resource "aws_subnet" "private" {
    vpc_id = aws_vpc.main.id

    count = 2
    cidr_block = "10.0.${count.index + 10}.0/24"

    availability_zone = var.availability_zones[count.index]

  
    tags = {
        Name = "private:${count.index}:${var.availability_zones[count.index]}"
    }
}

resource "aws_route_table" "igw_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public_subnet_igw_rta" {
    count = 2
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.igw_rt.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

  depends_on = [aws_internet_gateway.igw]
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
}

resource "aws_route_table_association" "private_subnet_nat_rta" {
    count = 2
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private_rt.id
}
